--- a/index.html
+++ b/index.html
@@ -9,52 +9,52 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="summary">
       <img src="./eisenhower-matrix.jpg">
       <a
-        class="more_inf"
+        class="summary__information"
         href="https://goal-life.com/page/method/matrix-eisenhower"
       >
         Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="content">
+      <p id="add-task">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+        <div class="new-task-wrapper">
+          <input class="task__input" id="new-task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
+      <ul id="incomplete-tasks">
+        <li class="task">
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task__label">Pay Bills</label>
+          <input class="task__input" type="text">
+          <button class="task__button-edit">Edit</button>
+          <button class="task__button-delete">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
+        <li class="task edit-task">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <label class="task__label">Go Shopping</label>
+          <input class="task__input" type="text" value="Go Shopping">
+          <button class="task__button-edit">Save</button>
+          <button class="task__button-delete">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
-        <li>
+        <li class="task">
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task__label">See the Doctor</label>
+          <input class="task__input" type="text">
+          <button class="task__button-edit">Edit</button>
+          <button class="task__button-delete">
             <img src="./remove.svg">
           </button>
         </li>
