refactor(basic-3.3): change classes and ids names as short as possible

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="summary">
       <img src="./eisenhower-matrix.jpg">
       <a
-        class="summary__information"
+        class="summary__info"
         href="https://goal-life.com/page/method/matrix-eisenhower"
       >
         Want more details?
@@ -32,8 +32,8 @@
           <input type="checkbox">
           <label class="task__label">Pay Bills</label>
           <input class="task__input" type="text">
-          <button class="task__button-edit">Edit</button>
-          <button class="task__button-delete">
+          <button class="task__btn-edit">Edit</button>
+          <button class="task__btn-delete">
             <img src="./remove.svg">
           </button>
         </li>
@@ -41,8 +41,8 @@
           <input type="checkbox">
           <label class="task__label">Go Shopping</label>
           <input class="task__input" type="text" value="Go Shopping">
-          <button class="task__button-edit">Save</button>
-          <button class="task__button-delete">
+          <button class="task__btn-edit">Save</button>
+          <button class="task__btn-delete">
             <img src="./remove.svg">
           </button>
         </li>
@@ -53,8 +53,8 @@
           <input type="checkbox" checked>
           <label class="task__label">See the Doctor</label>
           <input class="task__input" type="text">
-          <button class="task__button-edit">Edit</button>
-          <button class="task__button-delete">
+          <button class="task__btn-edit">Edit</button>
+          <button class="task__btn-delete">
             <img src="./remove.svg">
           </button>
         </li>
