--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="summary">
-      <img class="summary__img" src="./eisenhower-matrix.jpg">
+      <img class="summary__img" src="./eisenhower-matrix.jpg" alt="Image of the Eisenhower matrix for time management">
       <a
         class="summary__info"
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -34,7 +34,7 @@
           <input class="task__input" type="text">
           <button class="task__btn task__btn-edit">Edit</button>
           <button class="task__btn task__btn-delete">
-            <img class="task__btn-delete-img" src="./remove.svg">
+            <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
           </button>
         </li>
         <li class="task edit-task">
@@ -43,7 +43,7 @@
           <input class="task__input" type="text" value="Go Shopping">
           <button class="task__btn task__btn-edit">Save</button>
           <button class="task__btn task__btn-delete">
-            <img class="task__btn-delete-img" src="./remove.svg">
+            <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
           </button>
         </li>
       </ul>
@@ -55,7 +55,7 @@
           <input class="task__input" type="text">
           <button class="task__btn task__btn-edit">Edit</button>
           <button class="task__btn task__btn-delete">
-            <img class="task__btn-delete-img" src="./remove.svg">
+            <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
           </button>
         </li>
       </ul>
