--- a/index.html
+++ b/index.html
@@ -9,57 +9,69 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="summary">
-      <img class="summary__img" src="./eisenhower-matrix.jpg" alt="Image of the Eisenhower matrix for time management">
-      <a
-        class="summary__info"
-        href="https://goal-life.com/page/method/matrix-eisenhower"
-      >
-        Want more details?
-      </a>
-    </div>
-    <div class="content">
-      <p class="new-task" id="add-task">
-        <label class="new-task__label" for="new-task">Add Item</label>
-        <div class="task new-task__wrapper">
-          <input class="task__input" id="new-task" type="text">
-          <button class="task__btn">Add</button>
+    <header class="summary">
+      <figure>
+        <img class="summary__img" src="./eisenhower-matrix.jpg" alt="Image of the Eisenhower matrix for time management">
+        <figcaption>
+          <a
+            class="summary__info"
+            href="https://goal-life.com/page/method/matrix-eisenhower"
+          >
+            Want more details?
+          </a>
+        </figcaption>
+      </figure>
+    </header>
+    <main class="content">
+      <article>
+        <div class="new-task" id="add-task">
+          <h3>
+            <label class="new-task__label" for="new-task">Add Item</label>
+          </h3>
+          <div class="task new-task__wrapper">
+            <input class="task__input" id="new-task" type="text">
+            <button class="task__btn">Add</button>
+          </div>
         </div>
-      </p>
-      <h3 class="header-3">Todo</h3>
-      <ul id="incomplete-tasks">
-        <li class="task">
-          <input class="task__checkbox" type="checkbox">
-          <label class="task__label">Pay Bills</label>
-          <input class="task__input" type="text">
-          <button class="task__btn task__btn-edit">Edit</button>
-          <button class="task__btn task__btn-delete">
-            <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
-          </button>
-        </li>
-        <li class="task edit-task">
-          <input class="task__checkbox" type="checkbox">
-          <label class="task__label">Go Shopping</label>
-          <input class="task__input" type="text" value="Go Shopping">
-          <button class="task__btn task__btn-edit">Save</button>
-          <button class="task__btn task__btn-delete">
-            <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
-          </button>
-        </li>
-      </ul>
-      <h3 class="header-3">Completed</h3>
-      <ul id="completed-tasks">
-        <li class="task">
-          <input class="task__checkbox" type="checkbox" checked>
-          <label class="task__label task__label_crossed-out">See the Doctor</label>
-          <input class="task__input" type="text">
-          <button class="task__btn task__btn-edit">Edit</button>
-          <button class="task__btn task__btn-delete">
-            <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
-          </button>
-        </li>
-      </ul>
-    </div>
+        <section>
+          <h3 class="header-3">Todo</h3>
+          <ul id="incomplete-tasks">
+            <li class="task">
+              <input class="task__checkbox" type="checkbox">
+              <label class="task__label">Pay Bills</label>
+              <input class="task__input" type="text">
+              <button class="task__btn task__btn-edit">Edit</button>
+              <button class="task__btn task__btn-delete">
+                <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
+              </button>
+            </li>
+            <li class="task edit-task">
+              <input class="task__checkbox" type="checkbox">
+              <label class="task__label">Go Shopping</label>
+              <input class="task__input" type="text" value="Go Shopping">
+              <button class="task__btn task__btn-edit">Save</button>
+              <button class="task__btn task__btn-delete">
+                <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
+              </button>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3 class="header-3">Completed</h3>
+          <ul id="completed-tasks">
+            <li class="task">
+              <input class="task__checkbox" type="checkbox" checked>
+              <label class="task__label task__label_crossed-out">See the Doctor</label>
+              <input class="task__input" type="text">
+              <button class="task__btn task__btn-edit">Edit</button>
+              <button class="task__btn task__btn-delete">
+                <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
+              </button>
+            </li>
+          </ul>
+        </section>
+      </article>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
