refactor(basic-2.5): break long lines into multiple lines

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <body>
     <header class="summary">
       <figure>
-        <img class="summary__img" src="./eisenhower-matrix.jpg" alt="Image of the Eisenhower matrix for time management">
+        <img
+          class="summary__img"
+          src="./eisenhower-matrix.jpg"
+          alt="Image of the Eisenhower matrix for time management"
+        >
         <figcaption>
           <a
             class="summary__info"
@@ -42,7 +46,11 @@
               <input class="task__input" type="text">
               <button class="task__btn task__btn-edit">Edit</button>
               <button class="task__btn task__btn-delete">
-                <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
+                <img
+                  class="task__btn-delete-img"
+                  src="./remove.svg"
+                  alt="Task remove icon"
+                >
               </button>
             </li>
             <li class="task edit-task">
@@ -51,7 +59,11 @@
               <input class="task__input" type="text" value="Go Shopping">
               <button class="task__btn task__btn-edit">Save</button>
               <button class="task__btn task__btn-delete">
-                <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
+                <img
+                  class="task__btn-delete-img"
+                  src="./remove.svg"
+                  alt="Task remove icon"
+                >
               </button>
             </li>
           </ul>
@@ -65,7 +77,11 @@
               <input class="task__input" type="text">
               <button class="task__btn task__btn-edit">Edit</button>
               <button class="task__btn task__btn-delete">
-                <img class="task__btn-delete-img" src="./remove.svg" alt="Task remove icon">
+                <img
+                  class="task__btn-delete-img"
+                  src="./remove.svg"
+                  alt="Task remove icon"
+                >
               </button>
             </li>
           </ul>
